--- a/src/pages/HomePage/components/Header/Header.module.css
+++ b/src/pages/HomePage/components/Header/Header.module.css
@@ -252,6 +252,10 @@ html, body {
 }
 
 @media (max-width: 600px) {
+.logo {
+  width: 50%;
+  height: 50px;
+}
   .nav {
     width: 240px;
     padding-top: 80px;
